test: clarify Struts SMI checks
Agent-Logs-Url: https://github.com/carlos-emr/carlos/sessions/15d07919-3af2-4045-9d41-bdcac50a3e22

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>